--- a/env/flask_app/templates/index.html
+++ b/env/flask_app/templates/index.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
+{% block title %}Home Page{% endblock %}
+{% block content %}
+<h1>Home</h1>
+comment ça va <br>
+ca va ca va lol
+{% endblock %}
+<!-- <!DOCTYPE html>
+   <html>
    <head>
       <title>Ma première page HTML</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -10,16 +17,16 @@
          <font color="#DD7700"><b>HTML</b></font>
          est un langage de description de pages Web.
       </div>
-
+      
       <!-- On peut ajouter du code python -->
-      {% for x in noms %} 
+      <!-- {% for x in noms %} 
          {% if x == "lol" %}
-            <p>{{x}}</p>
+         <p>{{x}}</p>
          {% else %}
-            <p>tamere</p>
+         <p>tamere</p>
          {% endif %}
-      {% endfor %}
-
-
-   </body>
-</html> 
+         {% endfor %} -->
+         
+         
+      </body>
+      </html>  -->
