--- a/env/flask_app/templates/login.html
+++ b/env/flask_app/templates/login.html
@@ -2,11 +2,16 @@
 {% block title %}Login {% endblock %}
 
 {% block content %}
-<form action="#" method="post">
+
+<form action="#" method="post" name="form">
     <p>Nom:</p>
     <p><input type="text" name="nm" /></p>
     <p>Mot de passe:</p>
-    <p><input type="text" name="mdp" /></p>
+    <p><input type="password" id="mdp" name="mdp"></p>
+    <p><input type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'"> Show password</p>
+
     <p><input type="submit" value="submit" /></p>
 </form>
+ 
 {% endblock %}
+
