--- a/env/flask_app/templates/loginwrong.html
+++ b/env/flask_app/templates/loginwrong.html
@@ -10,7 +10,8 @@
     <p>Nom:</p>
     <p><input type="text" name="nm" /></p>
     <p>Mot de passe:</p>
-    <p><input type="text" name="mdp" /></p>
+    <p><input type="password" name="mdp" /></p>
+    <p><input type="checkbox" onclick="document.write('hello')" /> Afficher le mot de passe</p>
     <p><input type="submit" value="submit" /></p>
 </form>
 {% endblock %}
