--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <link rel="icon" type="image/x-icon" href="assets/img/resume.ico" />
+   <!-- Font Awesome icons (free version)-->
+   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+   <!-- Google fonts-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <title>{% block title %}{% endblock%}</title>
    <meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -15,28 +19,33 @@
          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="/login">Login</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="/logout">Logout</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
+                  <a class="nav-link" href="/user">Espace Utilisateur</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link disabled">Espace Utilisateur</a>
                </li>
             </ul>
          </div>
       </div>
-   </nav>
-   <h1>{{holla}} {{r}}</h1> <!-- On peut recevoir un argument de flask -->
+   </nav>   
    
-   {% block login %}
-   {% endblock%}
+   <div class="container-fluid">
+      {% block login %}
+      {% endblock%}
+      
+      {% block content %}
+      {% endblock%}
+   </div>
    
-   {% block content %}
-   {% endblock%}
    
    <!-- On peut ajouter du code python -->
    <!-- {% for x in noms %} 
