--- a/env/flask_app/templates/login.html
+++ b/env/flask_app/templates/login.html
@@ -2,6 +2,13 @@
 {% block title %}Login {% endblock %}
 
 {% block content %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+                <p>{{msg}}</p>
+                {% endfor %}
+        {% endif %}
+    {% endwith %}
 
 <form action="#" method="post" name="form">
     <p>Nom:</p>
@@ -9,9 +16,9 @@
     <p>Mot de passe:</p>
     <p><input type="password" id="mdp" name="mdp"></p>
     <p><input type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'"> Show password</p>
-
+    
     <p><input type="submit" value="submit" /></p>
 </form>
- 
+
 {% endblock %}
 
