--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -22,6 +22,9 @@
                   <a class="nav-link active" aria-current="page" href="/">Home</a>
                </li>
                <li class="nav-item">
+                  <a class="nav-link" href="/signup">S'inscrire</a>
+               </li>
+               <li class="nav-item">
                   <a class="nav-link" href="/login">Login</a>
                </li>
                <li class="nav-item">
