--- a/env/flask_app/templates/user.html
+++ b/env/flask_app/templates/user.html
@@ -10,7 +10,7 @@
     {% endwith %}
 
 <form action="#" method="POST">
-    <input type="email" name="email" placeholder="Entrer votre email" value="{{email if email}}"/>
+    <input type="email" name="mail" placeholder="Entrer votre email" value="{{email if email}}"/>
     <input type="submit" value="submit"/>
 </form>
 <p>Bienvenue, {{session['user']}}</p>
