connection utilisateur avec orm

--- a/env/flask_app/templates/login.html
+++ b/env/flask_app/templates/login.html
@@ -11,10 +11,10 @@
     {% endwith %}
 
 <form action="#" method="post" name="form">
-    <p>Nom :</p>
-    <p><input type="text" name="nm" placeholder="Entrer votre nom"/></p>
+    <p>Email :</p>
+    <p><input type="text" name="email" placeholder="Entrer votre email"/></p>
     <p>Mot de passe :</p>
-    <p><input type="password" id="mdp" name="mdp" placeholder="Entrer votre nom"></p>
+    <p><input type="password" id="mdp" name="mdp" placeholder="Entrer votre mot de passe"></p>
     <p><input type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'"> Show password</p>
     
     <p><input type="submit" value="submit" /></p>
