--- a/env/flask_app/templates/signup.html
+++ b/env/flask_app/templates/signup.html
@@ -12,13 +12,13 @@
 
 <form action="#" method="post" name="form" id="form">
     <p>Nom :</p>
-    <p><input type="text" name="nm" placeholder="Entrer votre nom" value="lol"/></p>
+    <p><input type="text" name="nm" placeholder="Entrer votre nom" /></p>
     <p>Email :</p>
-    <p><input type="email" name="email" id="email" placeholder="Entrer votre email" value="boussettanael@gmail.com"/></p>
+    <p><input type="email" name="email" id="email" placeholder="Entrer votre email" /></p>
     <p><label for="confirmmdp" id="labelmdp" style="color: black;">Mot de passe :</label></p>
-    <p><input type="password" id="mdp" name="mdp" placeholder="Entrer votre mot de passe" value="lol"></p>
+    <p><input type="password" id="mdp" name="mdp" placeholder="Entrer votre mot de passe" ></p>
     <!-- <p>Confirmer mot de passe:</p> -->
-    <p><input type="password" id="confirmmdp" name="confirmmdp" placeholder="Confirmer votre mot de passe" value="lolzdz"></p>
+    <p><input type="password" id="confirmmdp" name="confirmmdp" placeholder="Confirmer votre mot de passe"></p>
     <p><input type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'
         document.getElementById('confirmmdp').type = this.checked ? 'text' : 'password'"> Afficher mot de passe</p>    
     <p><input type="submit" value="submit" onclick="if(document.getElementById('mdp').value != document.getElementById('confirmmdp').value){
