--- a/env/flask_app/templates/user.html
+++ b/env/flask_app/templates/user.html
@@ -9,9 +9,8 @@
         {% endif %}
     {% endwith %}
 
-<form action="#" method="POST">
+<!-- <form action="#" method="POST">
     <input type="email" name="mail" placeholder="Entrer votre email" value="{{email if email}}"/>
     <input type="submit" value="submit"/>
-</form>
-<p>Bienvenue, {{session['user']}}</p>
+</form> -->
 {% endblock %}
