--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="icon" type="image/x-icon" href="assets/img/resume.ico" />
+   <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/apple-mail.png"/>
    <!-- Font Awesome icons (free version)-->
    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+   <!-- <script src="jquery-3.5.1.min.js"></script> -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel=”stylesheet” integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
    <!-- Google fonts-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <title>{% block title %}{% endblock%}</title>
@@ -34,7 +40,10 @@
                   <a class="nav-link" href="/user">Espace Utilisateur</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link disabled">Espace Utilisateur</a>
+                  <a class="nav-link" href="/consultmails">Consulter mails</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/consultexp">Consulter expéditeurs</a>
                </li>
             </ul>
          </div>
