--- a/env/flask_app/templates/signup.html
+++ b/env/flask_app/templates/signup.html
@@ -1,31 +1,75 @@
 {% extends "base.html" %}
-{% block title %}Login {% endblock %}
+{% block title %}S'inscrire {% endblock %}
 
 {% block content %}
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for msg in messages %}
-                <p>{{msg}}</p>
-                {% endfor %}
-        {% endif %}
-    {% endwith %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for msg in messages %}
+<p>{{msg}}</p>
+{% endfor %}
+{% endif %}
+{% endwith %}
 
-<form action="#" method="post" name="form" id="form">
-    <p>Nom :</p>
-    <p><input type="text" name="nm" placeholder="Entrer votre nom" /></p>
-    <p>Email :</p>
-    <p><input type="email" name="email" id="email" placeholder="Entrer votre email" /></p>
-    <p><label for="confirmmdp" id="labelmdp" style="color: black;">Mot de passe :</label></p>
-    <p><input type="password" id="mdp" name="mdp" placeholder="Entrer votre mot de passe" ></p>
-    <!-- <p>Confirmer mot de passe:</p> -->
-    <p><input type="password" id="confirmmdp" name="confirmmdp" placeholder="Confirmer votre mot de passe"></p>
-    <p><input type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'
-        document.getElementById('confirmmdp').type = this.checked ? 'text' : 'password'"> Afficher mot de passe</p>    
-    <p><input type="submit" value="submit" onclick="if(document.getElementById('mdp').value != document.getElementById('confirmmdp').value){
-                                                        document.getElementById('labelmdp').style='color: red'
-                                                        document.getElementById('labelmdp').textContent = 'veuillez ecrire le même mot de passe';
-                                                        return false;}"</p>
+
+<br>
+<form action="#" method="post" name="form">
+    <div class="form-group row">
+        <label for="nom" class="col-sm-2 col-form-label">Nom</label>
+        <div class="col-sm-10">
+            <input type="text" name="nm" class="form-control" placeholder="Entrer votre nom"/>
+        </div>
+    </div>
+    <br>
+    <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+            <input type="text" name="email" class="form-control" placeholder="Entrer votre email"/>
+            <small id="emailHelp" class="form-text text-muted">Ne partagez pas votre email</small>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="mdp" class="col-sm-2 col-form-label">Mot de passe</label>
+        <div class="col-sm-10">
+            <input type="password" id="mdp" name="mdp" class="form-control" placeholder="Entrer votre mot de passe">
+        </div>
+    </div>
+    <br>
+    <div class="form-group row">
+        <label for="confirmdp" class="col-sm-2 col-form-label">Confirmer mot de passe</label>
+        <div class="col-sm-10">
+            <input type="password" id="confirmmdp" name="confirmmdp" class="form-control" placeholder="Confirmer votre mot de passe">
+        </div>
+    </div>
+    
+    <div class="form-group row">
+        <div class="col-sm-2">Afficher mot de passe</div>
+        <div class="col-sm-10">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'
+                document.getElementById('confirmmdp').type = this.checked ? 'text' : 'password'">
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="form-group row">
+        <label for="mdpad" class="col-sm-2 col-form-label">Mot de passe Admin</label>
+        <div class="col-sm-10">
+            <input type="password" id="mdpad" name="mdpad" class="form-control" placeholder="Mot de passe admin">
+        </div>
+    </div>
+    <br>
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary" value="submit" onclick="if(document.getElementById('mdp').value != document.getElementById('confirmmdp').value){
+                document.getElementById('labelmdp').style='color: red'
+                document.getElementById('labelmdp').textContent = 'veuillez ecrire le même mot de passe';
+                return false;}">Submit
+            </button>
+        </div>
+    </div>
 </form>
+
+
 
 {% endblock %}
 
