--- a/env/flask_app/templates/login.html
+++ b/env/flask_app/templates/login.html
@@ -31,13 +31,12 @@
 <br>
 <form action="#" method="post" name="form">
     <div class="form-group row">
-        <label for="nom" class="col-sm-2 col-form-label">Email</label>
+        <label for="identifiant" class="col-sm-2 col-form-label">Pseudo</label>
         <div class="col-sm-10">
-            <input type="text" name="email" class="form-control" placeholder="Entrer votre email"/>
-            <small id="emailHelp" class="form-text text-muted">Ne partagez pas votre email</small>
+            <input type="text" name="identifiant" class="form-control" placeholder="Entrer votre pseudo"/>
         </div>
     </div>
-    <!-- <br> -->
+    <br> 
     <div class="form-group row">
         <label for="mdp" class="col-sm-2 col-form-label">Mot de passe</label>
         <div class="col-sm-10">
