--- a/env/flask_app/templates/loginwrong.html
+++ b/env/flask_app/templates/loginwrong.html
@@ -6,21 +6,36 @@
 <h1>Mauvais email ou mot de passe</h1>
 {% endblock%}
 {% block content %}
+<br>
 <form action="#" method="post" name="form">
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" name="email" class="form-control" placeholder="Entrer votre email"/>
-        <small id="emailHelp" class="form-text text-muted">Ne partagez pas votre email</small>
+    <div class="form-group row">
+        <label for="identifiant" class="col-sm-2 col-form-label">Pseudo</label>
+        <div class="col-sm-10">
+            <input type="text" name="identifiant" class="form-control" placeholder="Entrer votre pseudo"/>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="mdp">Mot de passe</label>
-        <input type="password" id="mdp" name="mdp" class="form-control" placeholder="Entrer votre mot de passe">
-        
+    <!-- <br> -->
+    <div class="form-group row">
+        <label for="mdp" class="col-sm-2 col-form-label">Mot de passe</label>
+        <div class="col-sm-10">
+            <input type="password" id="mdp" name="mdp" class="form-control" placeholder="Entrer votre mot de passe">
+        </div>
     </div>
-    <div class="form-check">
-        <label class="form-check-label" for="verifmdp" >Afficher le mot de passe</label>
-        <input type="checkbox" class="form-check-input"  onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'">
+    <br>
+    <div class="form-group row">
+        <div class="col-sm-2">Afficher mot de passe</div>
+        <div class="col-sm-10">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'
+                document.getElementById('confirmmdp').type = this.checked ? 'text' : 'password'">
+            </div>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary" value="submit" >Submit</button>
+    <br>
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary" value="submit" >Submit</button>
+        </div>
+    </div>
 </form>
 {% endblock %}
