implementation token + debut multi-lingue

--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -28,25 +28,25 @@
                   <a class="nav-link active" aria-current="page" href="/">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/signup">S'inscrire</a>
+                  <a class="nav-link" href="/signup">{{ signup }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link" href="/login">{{ login }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/logout">Logout</a>
+                  <a class="nav-link" href="/logout">{{ logout }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/user">Espace Utilisateur</a>
+                  <a class="nav-link" href="/user">{{ usersp }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultmails">Consulter mails en attente</a>
+                  <a class="nav-link" href="/consultmails">{{ consultMail }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultmailsblacklist">Consulter mails blacklistés</a>
+                  <a class="nav-link" href="/consultmailsblacklist">{{ consultMailBlack }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultexp">Consulter expéditeurs</a>
+                  <a class="nav-link" href="/consultexp">{{ consultexp }}</a>
                </li>
             </ul>
          </div>
