implementation multi-lingue

--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -28,25 +28,25 @@
                   <a class="nav-link active" aria-current="page" href="/">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/signup">{{ signup }}</a>
+                  <a class="nav-link" href="/signup">{{ _("S'inscrire") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/login">{{ login }}</a>
+                  <a class="nav-link" href="/login">{{ _("Se connecter") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/logout">{{ logout }}</a>
+                  <a class="nav-link" href="/logout">{{ _("Se déconnecter") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/user">{{ usersp }}</a>
+                  <a class="nav-link" href="/user">{{ _("Espace utilisateur") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultmails">{{ consultMail }}</a>
+                  <a class="nav-link" href="/consultmails">{{ _("Consulter mails en attente ") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultmailsblacklist">{{ consultMailBlack }}</a>
+                  <a class="nav-link" href="/consultmailsblacklist">{{ _("Consulter mails blacklistés ") }}</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/consultexp">{{ consultexp }}</a>
+                  <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a>
                </li>
             </ul>
          </div>
