--- a/env/flask_app/templates/loginwrong.html
+++ b/env/flask_app/templates/loginwrong.html
@@ -9,21 +9,21 @@
 <br>
 <form action="#" method="post" name="form">
     <div class="form-group row">
-        <label for="identifiant" class="col-sm-2 col-form-label">Pseudo</label>
+        <label for="identifiant" class="col-sm-2 col-form-label">{{ _("Pseudo") }}</label>
         <div class="col-sm-10">
-            <input type="text" name="identifiant" class="form-control" placeholder="Entrer votre pseudo"/>
+            <input type="text" name="identifiant" class="form-control" placeholder="{{ _("Entrer votre pseudo") }} "/>
         </div>
     </div>
     <!-- <br> -->
     <div class="form-group row">
-        <label for="mdp" class="col-sm-2 col-form-label">{{ mdp }}</label>
+        <label for="mdp" class="col-sm-2 col-form-label">{{ _("Mot de passe") }}</label>
         <div class="col-sm-10">
-            <input type="password" id="mdp" name="mdp" class="form-control" placeholder="Entrer votre mot de passe">
+            <input type="password" id="mdp" name="mdp" class="form-control" placeholder="{{ _("Entrer votre mot de passe") }} "/>
         </div>
     </div>
     <br>
     <div class="form-group row">
-        <div class="col-sm-2">{{ aff }} {{ mdp }}</div>
+        <div class="col-sm-2">{{ _("Afficher mot de passe") }}</div>
         <div class="col-sm-10">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'
