--- a/env/flask_app/templates/signup.html
+++ b/env/flask_app/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} {{ signup }} {% endblock %}
+{% block title %} {{ _("S'inscrire") }} {% endblock %}
 
 {% block content %}
 {% with messages = get_flashed_messages() %}
@@ -14,54 +14,54 @@
 <br>
 <form action="#" method="post" name="form">
     <div class="form-group row">
-        <label for="identifiant" class="col-sm-2 col-form-label">Pseudo</label>
+        <label for="identifiant" class="col-sm-2 col-form-label">{{ _("Pseudo") }}</label>
         <div class="col-sm-10">
-            <input type="text" name="identifiant" class="form-control" placeholder="Entrer votre pseudo"/>
+            <input type="text" name="identifiant" class="form-control" placeholder="{{ _("Entrer votre pseudo") }} "/>
         </div>
     </div>
     <br>
     <div class="form-group row">
-        <label for="nom" class="col-sm-2 col-form-label">{{ nom }}</label>
+        <label for="nom" class="col-sm-2 col-form-label">{{ _("Nom") }}</label>
         <div class="col-sm-10">
-            <input type="text" name="nm" class="form-control" placeholder="Entrer votre nom"/>
+            <input type="text" name="nm" class="form-control" placeholder="{{ _("Entrer votre nom") }} "/>
         </div>
     </div>
     <br>
     <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="text" name="mail" class="form-control" placeholder="Entrer votre email"/>
+            <input type="text" name="mail" class="form-control" placeholder="{{ _("Entrer votre email") }} "/>
             <small id="emailHelp" class="form-text text-muted">{{ share }}</small>
         </div>
     </div>
     <div class="form-group row">
-        <label for="mdp" class="col-sm-2 col-form-label">{{ mdp }}</label>
+        <label for="mdp" class="col-sm-2 col-form-label">{{ _("Mot de passe") }}</label>
         <div class="col-sm-10">
-            <input type="password" id="mdp" name="mdp" class="form-control" placeholder="Entrer votre mot de passe">
+            <input type="password" id="mdp" name="mdp" class="form-control" placeholder="{{ _("Entrer votre mot de passe") }} "/>
         </div>
     </div>
     <!-- <br> -->
     <div class="form-group row">
-        <label for="confirmdp" class="col-sm-2 col-form-label">{{ confirm }} {{ mdp }}</label>
+        <label for="confirmdp" class="col-sm-2 col-form-label">{{ _("Confirmer mot de passe")}}</label>
         <div class="col-sm-10">
-            <input type="password" id="confirmmdp" name="confirmmdp" class="form-control" placeholder="Confirmer votre mot de passe">
+            <input type="password" id="confirmmdp" name="confirmmdp" class="form-control" placeholder="{{ _("Confirmer votre mot de passe") }} "/>
         </div>
     </div>
     <br> 
     <div class="form-group row">
-        <div class="col-sm-2"> {{ aff }} {{ mdp }}</div>
+        <div class="col-sm-2"> {{ _("Afficher mot de passe") }}</div>
         <div class="col-sm-10">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" onchange="document.getElementById('mdp').type = this.checked ? 'text' : 'password'
-                document.getElementById('confirmmdp').type = this.checked ? 'text' : 'password'">
+                document.getElementById('confirmmdp').type = this.checked ? 'text' : 'password'"/>
             </div>
         </div>
     </div>
     <br>
     <div class="form-group row">
-        <label for="mdpad" class="col-sm-2 col-form-label">{{ adpass }}</label>
+        <label for="mdpad" class="col-sm-2 col-form-label">{{ _("Mot de passe Admin") }}</label>
         <div class="col-sm-10">
-            <input type="password" id="mdpad" name="mdpad" class="form-control" placeholder="Mot de passe admin">
+            <input type="password" id="mdpad" name="mdpad" class="form-control" placeholder="{{ _("Mot de passe admin") }} "/>
         </div>
     </div>
     <br>
@@ -70,7 +70,7 @@
             <button type="submit" class="btn btn-primary" value="submit" onclick="if(document.getElementById('mdp').value != document.getElementById('confirmmdp').value){
                 document.getElementById('labelmdp').style='color: red'
                 document.getElementById('labelmdp').textContent = 'veuillez ecrire le même mot de passe';
-                return false;}">Submit
+                return false;}"/>Submit
             </button>
         </div>
     </div>
