--- a/env/flask_app/templates/validation.html
+++ b/env/flask_app/templates/validation.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %} Validation {% endblock %}
+
 {% block content %}
 {% with messages = get_flashed_messages() %}
 {% if messages %}
