--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -6,6 +6,7 @@
    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
    <!-- <script src="jquery-3.5.1.min.js"></script> -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel=”stylesheet” integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -47,6 +48,9 @@
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/stats">{{ _("Consulter statistiques ") }}</a>
                </li>
             </ul>
          </div>
