--- a/env/flask_app/templates/validation.html
+++ b/env/flask_app/templates/validation.html
@@ -12,12 +12,7 @@
 
 <form action="#" method="post" name="form">
     <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Entrer votre adresse de messagerie">
-    </div>
-    <div class="mb-3">
-        <label for="token" class="form-label">Token</label>
-        <input type="text" class="form-control" id="token"  placeholder="Entrer le token reçu par mail">
+        <label for="titre" class="form-label">{{ _("Veuillez valider le captcha afin de valider votre email") }}</label>
     </div>
     <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Captcha</label>
