--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -40,12 +40,12 @@
                <li class="nav-item">
                   <a class="nav-link" href="/user">{{ _("Espace utilisateur") }}</a>
                </li>
-               <li class="nav-item">
+               <!-- <li class="nav-item">
                   <a class="nav-link" href="/consultmails">{{ _("Consulter mails en attente ") }}</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="/consultmailsblacklist">{{ _("Consulter mails blacklistés ") }}</a>
-               </li>
+               </li> -->
                <li class="nav-item">
                   <a class="nav-link" href="/consultexp">{{ _("Consulter expéditeurs ") }}</a>
                </li>
