--- a/env/flask_app/templates/consultexp.html
+++ b/env/flask_app/templates/consultexp.html
@@ -21,15 +21,20 @@
         <thead>
             <tr>
                 <th>{{ _("Identifiant") }}</th>
+                <th>{{ _("Email") }}</th>
+                <th>{{ _("Nombre de mails") }}</th>
                 <th>{{ _("Statut") }}</th>
             </tr>
         </thead>
         <tbody id='table'>
             {% for expediteurs in expediteurs %}
-
+            
             <tr id='tr'>
-                <td><input type=hidden id='nb'  name='nb' value="{{ expediteurs.mail }}">{{ expediteurs.mail }}</td>
+                <td><input type=hidden id='id'  name='id' value="{{ expediteurs.mail }}">{{ expediteurs.id }}</td>
                 <td><input type=hidden id='mail'  name='mail' value="{{ expediteurs.mail }}">{{ expediteurs.mail }}</td>
+                {% if expediteurs.mail in t: %}
+                <td><input type=hidden id='nb'  name='nb' value="{{ expediteurs.mail }}">{{ t.get(expediteurs.mail) }}</td>
+                {% endif %}
                 {% if expediteurs.statut == 3: %}
                 <td id='stat'><input type="number" id='statut' name='statut' min="1" max="3" value="3"></input></td>
                 {% else: %}
@@ -94,19 +99,18 @@
         });
         console.log(tab)
         jQuery.ajax({
-                url: '/consultexp',
-                type: "POST",
-                data: JSON.stringify({ paramName: tab }),
-                success: function(msg) {
-                        console.log(tab)
-                    },
-                    dataType: 'json'
-                
-                });     
-            }  
+            url: '/consultexp',
+            type: "POST",
+            data: JSON.stringify({ paramName: tab }),
+            success: function(msg) {
+                console.log(tab)
+            },
+            dataType: 'json'
             
-        </script>
-        
-        {% endblock %}
-        
-        
+        });     
+    }  
+    
+</script>
+
+{% endblock %}
+
