--- a/env/flask_app/templates/index.html
+++ b/env/flask_app/templates/index.html
@@ -2,5 +2,53 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
 <h1>Home</h1>
-L'application de filtrage
+{{ _("L'application de filtrage") }}
+</br>
+{% if c1 and c2 and c3: %}
+
+<table class="table table-sm table-dark table-bordered ">
+    <thead>
+        <tr class="bg-primary">
+            <th scope="col">{{ _("Serveur") }}</th>
+            <th scope="col">{{ _("Etat") }}</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% if c1==1:%}
+        <tr class="table-success">
+            <td>{{ _("Base de données" )}}</td>
+            <td>{{ _("Fonctionnel") }}</td>
+        </tr>
+        {% else %}
+        <tr class="table-danger">
+            <td>{{ _("Base de données" )}}</td>
+            <td>{{ _("Non-fonctionnel") }}</td>
+        </tr>
+        {% endif %}
+        {% if c2==1:%}
+        <tr class="table-success">
+            <td>{{ _("Postfix") }}</td>
+            <td>{{ _("Fonctionnel") }}</td>
+        </tr>
+        {% else %}
+        <tr class="table-danger">
+            <td>{{ _("Postfix") }}</td>
+            <td>{{ _("Non-fonctionnel") }}</td>
+        </tr>
+        {% endif %}
+        {% if c3==1:%}
+        <tr class="table-success">
+            <td>{{ _("Application") }}</td>
+            <td>{{ _("Fonctionnel") }}</td>
+        </tr>
+        {% else %}
+        <tr class="table-danger">
+            <td>{{ _("Application") }}</td>
+            <td>{{ _("Non-fonctionnel") }}</td>
+        </tr>
+        {% endif %}
+    </tbody>
+</table>
+{% endif %}
+
 {% endblock %}
