--- a/env/flask_app/templates/base.html
+++ b/env/flask_app/templates/base.html
@@ -52,6 +52,9 @@
                <li class="nav-item">
                   <a class="nav-link" href="/stats">{{ _("Consulter statistiques ") }}</a>
                </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/statut">{{ _("Consulter statut ") }}</a>
+               </li>
             </ul>
          </div>
       </div>
